--- a/style.css
+++ b/style.css
@@ -8,25 +8,25 @@ body {
 .container {
   display: flex;
   box-sizing: border-box;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  padding: 8vh 5vw;
 }
 
 .content {
-  width: 60vw;
-  height: 100%;
+  width: 56vw;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
+  margin-top: 5vh;
 }
 
 .product-name {
-  height: 9.5vh;
+  min-height: 9.5vh;
   width: 30vw;
   display: flex;
   flex-direction: column;
@@ -56,18 +56,19 @@ body {
 }
 
 .price-content {
-  height: 9vh;
+  min-height: 9vh;
   width: 38vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin-top: 1vh;
 }
 
 .discount-amount {
   height: 4vh;
-  width: 19vw;
+  width: 30vw;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -76,6 +77,7 @@ body {
   font-size: 2.1rem;
   font-weight: 700;
   margin: 0.7rem 0;
+  margin-right: 1.5rem;
 }
 
 #discount {
@@ -96,15 +98,18 @@ body {
 
 .color-choice {
   display: flex;
-  width: 19.5vw;
-  height: 3.8rem;
-  justify-content: space-between;
+  min-width: 35vw;
+  min-height: 3.8rem;
+  justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .color-btn {
   height: 3.2rem;
   width: 3.2rem;
+  margin-right: 1rem;
+  margin-top: 0.2rem;
   border: none;
 }
 
@@ -113,8 +118,8 @@ body {
 }
 
 .size-content {
-  height: 10vh;
-  width: 38vw;
+  min-height: 10vh;
+  min-width: 38vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -130,18 +135,20 @@ body {
 }
 
 .size-btn {
-  width: 38vw;
-  height: 2.5rem;
+  min-width: 38vw;
+  min-height: 2.5rem;
   display: flex;
   box-sizing: border-box;
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
+  flex-wrap: wrap;
 }
 
 .size-btn button {
   border-radius: 8px;
   height: 1.8rem;
+  width: auto;
   background-color: #f3f3f3;
   border: none;
   padding: 7px 10px;
@@ -159,8 +166,8 @@ body {
 }
 
 .cart-box {
-  width: 42vw;
-  min-height: 8vh;
+  min-width: 42vw;
+  min-height: 9vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -198,6 +205,7 @@ body {
   border: none;
   font-weight: 600;
 }
+
 .cart-btn img {
   height: 1.2rem;
   margin-right: 0.3rem;
@@ -223,13 +231,14 @@ body {
 
 .content-img {
   width: 32vw;
-  height: 100%;
+  min-height: 83vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  margin-right: 5vw;
+  margin-right: 3vw;
+  margin-top: 5vh;
 }
 
 .main-img {
@@ -241,8 +250,10 @@ body {
 .all-img {
   padding: 0;
   width: 30vw;
+  height: auto;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .all-img img {
@@ -261,3 +272,67 @@ body {
   width: 47vw;
 }
 
+@media screen and (max-width: 767px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .content-img {
+    width: 85vw;
+    min-height: 50vh;
+  }
+
+  .main-img {
+    width: 80%;
+    min-height: 60%;
+  }
+
+  .all-img {
+    padding: 2vh 0;
+    width: 80vw;
+    height: 35%;
+  }
+
+  .content {
+    width: 85vw;
+  }
+
+  .product-name {
+    width: 90%;
+  }
+
+  .price-content {
+    width: 90%;
+  }
+
+  .discount-amount {
+    width: 90%;
+  }
+
+  .break-line {
+    margin: 2vh 0;
+  }
+
+  .cart-box {
+    width: 90%;
+    flex-wrap: wrap;
+  }
+
+  .quantity-box {
+    width: 40vw;
+  }
+
+  .cart-btn {
+    width: 50vw;
+    margin: 2vh 0;
+  }
+
+  #final-msg {
+    font-size: 1rem;
+    font-weight: 200;
+  }
+
+  #description {
+    width: 85vw;
+  }
+}
